--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <p>"Iniciante na programação"</p>
         <div class="conteiner">
             <div class="seletores">
-                <a href="#" class="linkp">GitHub</a>
-                <a href="#" class="linkp">Linkedin</a>
-                <a href="#" class="linkp">Twitter</a>
-                <a href="#" class="linkp">Instagram</a>
+                <a href="https://github.com/wevertonseixas" class="linkp" target="_blank">GitHub</a>
+                <a href="https://www.linkedin.com/in/weverton-nascimento-seixas-a5bb502b2/" class="linkp" target="_blank">Linkedin</a>
+                <a href="https://twitter.com/WevertonSe55992" class="linkp" target="_blank">Twitter</a>
+                <a href="https://www.instagram.com/weve_onne/" class="linkp" target="_blank">Instagram</a>
             </div>
         </div>
     </main>
